--- a/page3.html
+++ b/page3.html
@@ -11,74 +11,44 @@
 	<div class="menu_side_bar">
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M12.3372 17.9706C15.4614 21.0948 20.5267 21.0948 23.6509 17.9706C26.7751 14.8464 26.7751 9.78106 23.6509 6.65686C20.5267 3.53266 15.4614 3.53266 12.3372 6.65686C9.21297 9.78106 9.21297 14.8464 12.3372 17.9706ZM12.3372 17.9706L6.6803 23.6274" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>
+			<div class="menu_side_bar_pic"></div>
 			<div class="menu_side_bar_text">
 				<input type="text" class="menu_side_bar_searchbox" placeholder="Search">
 			</div>
 		</div>
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="26" height="28" viewBox="0 0 26 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M25.1858 8V3H19.6858M25.1858 8H19.6858M25.1858 8V12.5M1.18579 8V3H7.18579M1.18579 8H7.18579M1.18579 8V12.5M13.6858 8H19.6858M13.6858 8H7.18579M13.6858 8V12.5M13.6858 27H19.6858M13.6858 27H7.18579M13.6858 27V22M19.6858 8V12.5M19.6858 27H23.1858C24.2904 27 25.1858 26.1046 25.1858 25V22M19.6858 27V22M7.18579 8V12.5M7.18579 27H3.18579C2.08122 27 1.18579 26.1046 1.18579 25V22M7.18579 27V22M25.1858 17.5V12.5M25.1858 17.5V22M25.1858 17.5H19.6858M1.18579 17.5V12.5M1.18579 17.5V22M1.18579 17.5H7.18579M1.18579 12.5H7.18579M25.1858 12.5H19.6858M25.1858 22H19.6858M1.18579 22H7.18579M19.6858 5V3M19.6858 3V1M19.6858 3H7.18579M7.18579 3V1M7.18579 3V5M19.6858 12.5V17.5M19.6858 12.5H13.6858M19.6858 17.5V22M19.6858 17.5H13.6858M19.6858 22H13.6858M13.6858 22V17.5M13.6858 22H7.18579M13.6858 17.5V12.5M13.6858 17.5H7.18579M13.6858 12.5H7.18579M7.18579 12.5V17.5M7.18579 17.5V22" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>
+			<div class="menu_side_bar_pic"><img src="pics/rectangle1.svg"></div> 
 			<div class="menu_side_bar_text">Exhibitions & Events</div>
 		</div>
 		
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="26" height="24" viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M19.1858 19C20.5665 19 21.6858 17.8807 21.6858 16.5C21.6858 15.1193 20.5665 14 19.1858 14C17.8051 14 16.6858 15.1193 16.6858 16.5C16.6858 17.8807 17.8051 19 19.1858 19ZM19.1858 19C16.9767 19 15.1858 20.7909 15.1858 23H23.1858C23.1858 20.7909 21.3949 19 19.1858 19ZM10.1858 6.5C10.1858 8.98528 8.17107 11 5.68579 11C3.20051 11 1.18579 8.98528 1.18579 6.5C1.18579 4.01472 3.20051 2 5.68579 2C8.17107 2 10.1858 4.01472 10.1858 6.5ZM1.18579 14H10.1858V23H1.18579V14ZM19.1858 2L24.1858 11H14.1858L19.1858 2Z" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>
+			<div class="menu_side_bar_pic"><img src="pics/ellipse.svg"></div>
 			<div class="menu_side_bar_text">Artists & Artworks</div>
 		</div>
 		
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M1 4.25L8.5 1L16 4.25M1 4.25L8.5 8M1 4.25V14.75L8.5 18M8.5 8V18M8.5 8L16 4.25M8.5 18L16 14.75V4.25" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>	
+			<div class="menu_side_bar_pic"><img src="pics/collections.svg"></div>	
 			<div class="menu_side_bar_text">Collections</div>
 		</div>
 		
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M13.1858 15H25.1858V11.8705C23.4674 11.4218 22.1992 9.85899 22.1992 8C22.1992 6.14101 23.4674 4.57821 25.1858 4.12951V1H13.1858M13.1858 15H1.18579V12.1176V12C3.39493 12 5.18579 10.2091 5.18579 8C5.18579 5.79086 3.39493 4 1.18579 4V1H13.1858M13.1858 15V13M13.1858 1V3M13.1858 5V7M13.1858 9V11" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>
+			<div class="menu_side_bar_pic"><img src="pics/subtract.svg"></div>
 			<div class="menu_side_bar_text">Plan Your Visit</div>
 		</div>
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="32" height="20" viewBox="0 0 32 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M27.1858 6.5H16.1858M27.1858 9.5H16.1858M27.1858 12.5H16.1858M8.68579 10C10.0665 10 11.1858 8.88071 11.1858 7.5C11.1858 6.11929 10.0665 5 8.68579 5C7.30508 5 6.18579 6.11929 6.18579 7.5C6.18579 8.88071 7.30508 10 8.68579 10ZM8.68579 10C6.47665 10 4.68579 11.7909 4.68579 14H12.6858C12.6858 11.7909 10.8949 10 8.68579 10ZM1.18579 1H31.1858V19H1.18579V1Z" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>
+			<div class="menu_side_bar_pic"><img src="pics/rectangle2.svg"></div>
 			<div class="menu_side_bar_text">Become a Member</div>
 		</div>
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic">
-				<svg width="25" height="31" viewBox="0 0 25 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M12.5 8C12.1846 8 13.184 8 12.5 8V8Z" fill="#DADADA"/>
-				<path d="M12.5 8C12.8154 8 11.816 8 12.5 8V8Z" fill="#DADADA"/>
-				<path d="M1 19V30H12.5M1 19V8H12.5M1 19H12.5M24 19V8H12.5M24 19V30H12.5M24 19H12.5M12.5 8C13.5 3.5 16.7449 -0.499994 19.1858 2.00001C21.658 4.53215 15.3753 7.84411 12.5 8ZM12.5 8C12.1846 8 13.184 8 12.5 8ZM12.5 8V19M12.5 8C11.5 3.5 8.25505 -0.499994 5.81421 2.00001C3.34198 4.53215 9.62471 7.84411 12.5 8ZM12.5 8C12.8154 8 11.816 8 12.5 8ZM12.5 30V19" stroke="white" stroke-linecap="square"/>
-				</svg>
-			</div>
+			<div class="menu_side_bar_pic"><img src="pics/shop.svg"></div>
 			<div class="menu_side_bar_text">Shop</div>
 		</div>
 
 	</div>
-	
+
 	<script src="js/script.js"></script>		
 </body>
 </html>
