--- a/page7.html
+++ b/page7.html
@@ -8,40 +8,54 @@
 	<link rel="stylesheet" href="css/page7.css">
 </head>
 <body>
-<div class="tickets">
-	<div class="navigationBar_page7">
-	<div class="THE_ART_MUSEUM_page7">THE<br> ART<br> MUSEUM</div>
-	<div class="Plan_Your_Visit_page7">Plan Your Visit</div>
-	<div class="menu_page7"></div>
+<div class="back_container">
+<div class="container">
+	<div class="tickets">
+		<div class="navigationBar_page7">
+		<div class="THE_ART_MUSEUM_page7">THE<br> ART<br> MUSEUM</div>
+		<div class="Plan_Your_Visit_page7">Plan Your Visit</div>
+		<div class="menu_page7"></div>
+		</div>
+	<div class="content_page7">
+		<div class="Skip_the_Line_page7">Skip the Line.<br> Purchase Tickets.</div>
+		<div class="All_Exhibitions_page7">All exhibitions, audio tours, and films<br> included in the price of admission.</div>
+		<div class="date_page7">
+			<div class="Today_page7">Today</div>
+			<div class="Tommorow_page7">Tommorow</div>
+			<div class="Other_page7">Other</div>
+			<div class="cont_line_page7">
+				<div class="line1_page7"></div>
+				<div class="line2_page7"></div>
+			</div>
+			<div class="March_22_2016_page7">March 22, 2016<br> Open 10:30am-5:30pm</div>
+		</div>
+		<div class="left_group_page7">
+			<div class="Adults_page7">Adults</div>
+			<div class="Seniors_page7">Seniors</div>
+			<div class="Students_page7">Students</div>
+		</div>
+		<div class="right_group_page7">
+			<div class="Restangle-1_page7">-</div>
+				<div class="nuber1_page7">2</div>
+			<div class="Restangle-1plus_page7">+</div>
+			<div class="Restangle-2_page7">-</div>
+				<div class="nuber2_page7">0</div>
+			<div class="Restangle-2plus_page7">+</div>
+			<div class="Restangle-3_page7">-</div>
+				<div class="nuber3_page7">0</div>
+			<div class="Restangle-3plus_page7">+</div>
+		</div>
+		<div class="cont_frame_page7">
+			<div class="frame_line_page7"></div>
+			<div class="Total_page7">Total</div>
+			<div class="text_total_page7">$16</div>
+		</div>
+	</div>
+	<div class="button_page7">
+	<div class="cont_button_page7">Continue to Payment</div>
+	</div>
+	</div>
 </div>
-
-<div class="content_page7">
-	<div class="Skip_the_Line_page7">Skip the Line.<br> Purchase Tickets.</div>
-	<div class="All_Exhibitions_page7">All exhibitions, audio tours, and films<br> included in the price of admission.</div>
-	<div class="date_page7">
-		<div class="Today_page7">Today</div>
-		<div class="Tommorow_page7">Tommorow</div>
-		<div class="Other_page7">Other</div>
-		<div class="March_22_2016_page7">March 22, 2016<br> Open 10:30am-5:30pm</div>
-	</div>
-	<div class="left_group_page7">
-		<div class="Adults_page7">Adults</div>
-		<div class="Seniors_page7">Seniors</div>
-		<div class="Students_page7">Students</div>
-	</div>
-	<div class="right_group_page7">
-		<div class="Restangle-1_page7">-</div>
-			<div class="nuber1_page7">2</div>
-		<div class="Restangle-1plus_page7">+</div>
-		<div class="Restangle-2_page7">-</div>
-			<div class="nuber2_page7">0</div>
-		<div class="Restangle-2plus_page7">+</div>
-		<div class="Restangle-3_page7">-</div>
-			<div class="nuber3_page7">0</div>
-		<div class="Restangle-3plus_page7">+</div>
-	</div>
-</div>
-
 </div>
 </body>
 </html>
