--- a/page(6).html
+++ b/page(6).html
@@ -5,11 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
+  <link rel="stylesheet" href="system.css">
 	<link rel="stylesheet" href="css/page6.css">
 </head>
 <body>
 
-	
+	<div class="back_container"></div>
+  <div class="container">
 	<div class="Nav">
 		<div class="text1">THE<br>ART<br>MUSEUM</div>
 		<div class="text2">Collections</div>
@@ -21,7 +23,7 @@
 
 
 
-  <div class="container">
+  <div class="container_img">
   	<div class="img1"></div>
   	<div class="text4">Decoration <br>Arts & Crafts</div>
   	<div class="img2"></div>
@@ -41,6 +43,8 @@
                 	<div class="text9">Antiquities</div>
 
 
+  </div>
+  </div>
   </div>
 	
 </body>
