--- a/page3.html
+++ b/page3.html
@@ -11,44 +11,43 @@
 	<div class="menu_side_bar">
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"></div>
+			<div class="menu_side_bar_pic"><img src="pic/ellipse1.svg"></div>
 			<div class="menu_side_bar_text">
 				<input type="text" class="menu_side_bar_searchbox" placeholder="Search">
 			</div>
 		</div>
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"><img src="pics/rectangle1.svg"></div> 
+			<div class="menu_side_bar_pic"><img src="pic/rectangle1.svg"></div> 
 			<div class="menu_side_bar_text">Exhibitions & Events</div>
 		</div>
 		
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"><img src="pics/ellipse.svg"></div>
+			<div class="menu_side_bar_pic"><img src="pic/ellipse2.svg"></div>
 			<div class="menu_side_bar_text">Artists & Artworks</div>
 		</div>
 		
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"><img src="pics/collections.svg"></div>	
+			<div class="menu_side_bar_pic"><img src="pic/collections.svg"></div>	
 			<div class="menu_side_bar_text">Collections</div>
 		</div>
 		
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"><img src="pics/subtract.svg"></div>
+			<div class="menu_side_bar_pic"><img src="pic/subtract.svg"></div>
 			<div class="menu_side_bar_text">Plan Your Visit</div>
 		</div>
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"><img src="pics/rectangle2.svg"></div>
+			<div class="menu_side_bar_pic"><img src="pic/rectangle2.svg"></div>
 			<div class="menu_side_bar_text">Become a Member</div>
 		</div>
 
 		<div class="menu_side_bar_item">
-			<div class="menu_side_bar_pic"><img src="pics/shop.svg"></div>
+			<div class="menu_side_bar_pic"><img src="pic/shop.svg"></div>
 			<div class="menu_side_bar_text">Shop</div>
 		</div>
 
 	</div>
 
-	<script src="js/script.js"></script>		
 </body>
 </html>
